# edgynodes

./: README.md  pyproject.toml
.github/workflows/: publish.yml
edgyllm/: mistral.py  nodes.py  states.py
edgynodes/discord/: __init__.py  temporary_message_controller.py  text_channel_base.py
edgynodes/discord_llm/: __init__.py  text_channel_llm_base.py
edgynodes/llm/: __init__.py  base.py  openai.py  openai_azure.py  openai_claude.py  openai_gemini.py  openai_mistral.py  openai_ollama.py  tools_base.py
examples/custom_discord_bot/: dsc.py  logger.py  message_handling.py
src/edgynodes/: __init__.py
src/edgynodes/discord/: __init__.py  states.py  text_channel_base.py
src/edgynodes/discord/core/: nodes.py  states.py
src/edgynodes/discord/nodes/: __init__.py  add_new_messages.py  read_new_messages.py  save_current_messages.py  typing.py
src/edgynodes/discord/utils/: temporary_message_controller.py  typing_manager.py
src/edgynodes/discord_discordmessage/: __init__.py  states.py
src/edgynodes/discord_llm/: __init__.py  states.py
src/edgynodes/discord_llm/core/: nodes.py  states.py
src/edgynodes/discord_llm/nodes/: build_chat.py  nodes.py  respond.py
src/edgynodes/discord_voice/: __init__.py
src/edgynodes/discordmessage/: __init__.py  states.py
src/edgynodes/discordtmp/: __init__.py  states.py
src/edgynodes/discordvoice/: __init__.py  states.py
src/edgynodes/discordvoice_llm/: __init__.py  states.py
src/edgynodes/llm/: __init__.py  base.py  openai_mistral.py  states.py  tools_base.py
src/edgynodes/redis/: __init__.py
(+78 files in other folders)
