[project]
name = "edgynodes"
version = "0.0.100"
description = "Graph-based LLM Pipeline Builder with edgygraph and llm-ir"
authors = [{ name="Mathis Siebert" }]
requires-python = ">=3.13"
dependencies = [
    "llmir>=0.0.13",
    "edgygraph>=0.0.2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

